# Game-Dictionary-Word-Predictor

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  slanggen.toml
.hypothesis/constants/: 00a8d89e24195337  c44d66921ff7daa9  c8eeb483bc13502e  da39a3ee5e6b4b0d  e787dcf7e08b102e
.hypothesis/examples/04e6b3400353b141/: 28f0f92de7197cd4  e00b63316382b5f0
artefacts/: config.json  history.txt  model.pth  tokenizer.json
assets/: straattaal.txt
backend/: app.py
frontend/: index.html
frontend/static/: styles.css
src/slanggen/: datatools.py  test.py
tests/: test_api.py  test_generation.py  test_integration.py  test_model.py
