[project]
name = "slanggen"
version = "0.4"
description = "generate slang"
authors = [
    {name = "Marcello Wienhoven", email = "M.Wienhoven@student.han.nl"}
]
dependencies = [
    "loguru>=0.7.2",
    "numpy",
    "tokenizers>=0.19.1",
    "matplotlib>=3.9.2",
    "requests>=2.32.5",
    "torch>=2.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
torch = [
    "torch>=2.0"
]
scrape = [
    "beautifulsoup4>=4.12.3",
]
frontend = [
    "fastapi[standard]>=0.115.6",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
torch = [
    {index = "pytorch"},
]
torchvision = [
    {index = "pytorch"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slanggen"]